// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create program should not be able to post a program with 2 of the same names 1`] = `
{
  "errors": "The following names: 'fullName' are used more than once program registration attributes",
}
`;

exports[`Create program should not be able to post a program with missing names of full name naming convention 1`] = `
{
  "errors": "Element 'middle_name' of fullnameNamingConvention is not found in program questions or custom attributes",
}
`;

exports[`Create program should post a program: Create program response for program: DRA Joint Response 2023 Ethiopia - Dorcas 1`] = `
{
  "aboutProgram": {
    "en": "DRA Joint Response Ethiopia 2023 - Dorcas",
  },
  "allowEmptyPhoneNumber": false,
  "budget": null,
  "currency": "ETB",
  "description": {
    "en": "",
  },
  "distributionDuration": 3,
  "distributionFrequency": "month",
  "editableAttributes": [
    {
      "isRequired": false,
      "label": {
        "en": "Age",
        "et_AM": "እድሜ",
      },
      "name": "age",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Bank Account Number",
      },
      "name": "bankAccountNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Name",
        "et_AM": "ስም",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Gender",
        "et_AM": "ጾታ",
      },
      "name": "gender",
      "type": "dropdown",
    },
    {
      "isRequired": false,
      "label": {
        "en": "How many female?",
        "et_AM": "ሴት አባላት",
      },
      "name": "howManyFemale",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female with disability over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female with disability under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ",
      },
      "name": "howManyFemaleOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች",
      },
      "name": "howManyFemaleUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "How many male?",
        "et_AM": "ወንድ አባላት",
      },
      "name": "howManyMale",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male with disability over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male with disability under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ",
      },
      "name": "howManyMaleOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች",
      },
      "name": "howManyMaleUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "ID Card number",
        "et_AM": "የመታውቂያ ቁጥር",
      },
      "name": "idNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Phone number",
        "et_AM": "ስልክ ቁጥር",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Total family members",
        "et_AM": "በቤተሰብዎ ውስጥ ያሉት አባላት",
      },
      "name": "totalFamilyMembers",
      "type": "numeric",
    },
  ],
  "enableMaxPayments": true,
  "enableScope": false,
  "filterableAttributes": [
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "lastMessageStatus",
        },
      ],
      "group": "messages",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "age",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "bankAccountNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "financialServiceProvider",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "fullName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "gender",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemale",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleDisabilityOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleDisabilityUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMale",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleDisabilityOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleDisabilityUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "idNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "inclusionScore",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentAmountMultiplier",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "personAffectedSequence",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "phoneNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "preferredLanguage",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "referenceId",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "registrationCreatedDate",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "totalFamilyMembers",
        },
      ],
      "group": "paAttributes",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "failedPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "maxPayments",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "notYetSentPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentCount",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentCountRemaining",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "successPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "waitingPayment",
        },
      ],
      "group": "payments",
    },
  ],
  "fixedTransferValue": 7000,
  "fullnameNamingConvention": [
    "fullName",
  ],
  "id": 5,
  "languages": [
    "en",
    "et_AM",
  ],
  "location": "Ethiopia",
  "monitoringDashboardUrl": null,
  "ngo": "Dorcas",
  "paTableAttributes": [
    {
      "isRequired": false,
      "label": {
        "en": "Age",
        "et_AM": "እድሜ",
      },
      "name": "age",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Bank Account Number",
      },
      "name": "bankAccountNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Name",
        "et_AM": "ስም",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Gender",
        "et_AM": "ጾታ",
      },
      "name": "gender",
      "type": "dropdown",
    },
    {
      "isRequired": false,
      "label": {
        "en": "How many female?",
        "et_AM": "ሴት አባላት",
      },
      "name": "howManyFemale",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female with disability over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female with disability under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ",
      },
      "name": "howManyFemaleOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Female under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች",
      },
      "name": "howManyFemaleUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "How many male?",
        "et_AM": "ወንድ አባላት",
      },
      "name": "howManyMale",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male with disability over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male with disability under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ",
      },
      "name": "howManyMaleOver18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Male under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች",
      },
      "name": "howManyMaleUnder18",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "ID Card number",
        "et_AM": "የመታውቂያ ቁጥር",
      },
      "name": "idNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Phone number",
        "et_AM": "ስልክ ቁጥር",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Total family members",
        "et_AM": "በቤተሰብዎ ውስጥ ያሉት አባላት",
      },
      "name": "totalFamilyMembers",
      "type": "numeric",
    },
  ],
  "paymentAmountMultiplierFormula": null,
  "programRegistrationAttributes": [
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 29,
      "isRequired": false,
      "label": {
        "en": "Age",
        "et_AM": "እድሜ",
      },
      "name": "age",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": false,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 42,
      "isRequired": false,
      "label": {
        "en": "Bank Account Number",
      },
      "name": "bankAccountNumber",
      "options": null,
      "pattern": ".+",
      "placeholder": {
        "en": "Please type your bank account number",
      },
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": true,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 26,
      "isRequired": false,
      "label": {
        "en": "Name",
        "et_AM": "ስም",
      },
      "name": "fullName",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 30,
      "isRequired": false,
      "label": {
        "en": "Gender",
        "et_AM": "ጾታ",
      },
      "name": "gender",
      "options": [
        {
          "label": {
            "en": "Male",
            "et_AM": "ወንድ",
          },
          "option": "male",
        },
        {
          "label": {
            "en": "Female",
            "et_AM": "ሴት",
          },
          "option": "female",
        },
      ],
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "dropdown",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 31,
      "isRequired": false,
      "label": {
        "en": "How many female?",
        "et_AM": "ሴት አባላት",
      },
      "name": "howManyFemale",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 40,
      "isRequired": false,
      "label": {
        "en": "Female with disability over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityOver18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 38,
      "isRequired": false,
      "label": {
        "en": "Female with disability under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityUnder18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 36,
      "isRequired": false,
      "label": {
        "en": "Female over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ",
      },
      "name": "howManyFemaleOver18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 34,
      "isRequired": false,
      "label": {
        "en": "Female under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች",
      },
      "name": "howManyFemaleUnder18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 32,
      "isRequired": false,
      "label": {
        "en": "How many male?",
        "et_AM": "ወንድ አባላት",
      },
      "name": "howManyMale",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 41,
      "isRequired": false,
      "label": {
        "en": "Male with disability over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityOver18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 39,
      "isRequired": false,
      "label": {
        "en": "Male with disability under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityUnder18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 37,
      "isRequired": false,
      "label": {
        "en": "Male over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ",
      },
      "name": "howManyMaleOver18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 35,
      "isRequired": false,
      "label": {
        "en": "Male under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች",
      },
      "name": "howManyMaleUnder18",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": true,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 28,
      "isRequired": false,
      "label": {
        "en": "ID Card number",
        "et_AM": "የመታውቂያ ቁጥር",
      },
      "name": "idNumber",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 27,
      "isRequired": false,
      "label": {
        "en": "Phone number",
        "et_AM": "ስልክ ቁጥር",
      },
      "name": "phoneNumber",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "tel",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 33,
      "isRequired": false,
      "label": {
        "en": "Total family members",
        "et_AM": "በቤተሰብዎ ውስጥ ያሉት አባላት",
      },
      "name": "totalFamilyMembers",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
  ],
  "published": true,
  "targetNrRegistrations": 250,
  "titlePortal": {
    "en": "DRA Joint Response 2023 Ethiopia - Dorcas",
    "et_AM": "የዲአርኤየጋራ ምላሽ 2023 ኢትዮጵያ - ዶርካስ።",
  },
  "tryWhatsAppFirst": false,
  "validation": false,
}
`;

exports[`Create program should post a program: Create program response for program: NLRC OCW program 1`] = `
{
  "aboutProgram": {
    "en": "This is the OCW program.",
  },
  "allowEmptyPhoneNumber": false,
  "budget": null,
  "currency": "EUR",
  "description": {
    "en": "",
  },
  "distributionDuration": 46,
  "distributionFrequency": "2-weeks",
  "editableAttributes": [
    {
      "isRequired": false,
      "label": {
        "en": "Address city",
      },
      "name": "addressCity",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number",
      },
      "name": "addressHouseNumber",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number addition",
      },
      "name": "addressHouseNumberAddition",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address postal code",
      },
      "name": "addressPostalCode",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address street",
      },
      "name": "addressStreet",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Full Name",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
    {
      "isRequired": false,
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "type": "tel",
    },
  ],
  "enableMaxPayments": false,
  "enableScope": false,
  "filterableAttributes": [
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "lastMessageStatus",
        },
      ],
      "group": "messages",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressCity",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressHouseNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressHouseNumberAddition",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressPostalCode",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressStreet",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "financialServiceProvider",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "fullName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "inclusionScore",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentAmountMultiplier",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "personAffectedSequence",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "phoneNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "preferredLanguage",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "referenceId",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "registrationCreatedDate",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "whatsappPhoneNumber",
        },
      ],
      "group": "paAttributes",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "failedPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "notYetSentPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentCount",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "successPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "waitingPayment",
        },
      ],
      "group": "payments",
    },
  ],
  "fixedTransferValue": 25,
  "fullnameNamingConvention": [
    "fullName",
  ],
  "id": 4,
  "languages": [
    "en",
    "nl",
    "ar",
    "tr",
  ],
  "location": "Nederland",
  "monitoringDashboardUrl": "https://app.powerbi.com/view?r=eyJrIjoiNDkxN2Q1NmEtOWIxOC00ZTYyLTkxMTMtYmI3MmE4YTVkMTE2IiwidCI6ImEyYjUzYmU1LTczNGUtNGU2Yy1hYjBkLWQxODRmNjBmZDkxNyIsImMiOjh9",
  "ngo": "NLRC",
  "paTableAttributes": [
    {
      "isRequired": false,
      "label": {
        "en": "Address city",
      },
      "name": "addressCity",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number",
      },
      "name": "addressHouseNumber",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number addition",
      },
      "name": "addressHouseNumberAddition",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address postal code",
      },
      "name": "addressPostalCode",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address street",
      },
      "name": "addressStreet",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Full Name",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
    {
      "isRequired": false,
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "type": "tel",
    },
  ],
  "paymentAmountMultiplierFormula": null,
  "programRegistrationAttributes": [
    {
      "duplicateCheck": false,
      "editableInPortal": false,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 25,
      "isRequired": false,
      "label": {
        "en": "Address city",
      },
      "name": "addressCity",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": false,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 22,
      "isRequired": false,
      "label": {
        "en": "Address house number",
      },
      "name": "addressHouseNumber",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": false,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 23,
      "isRequired": false,
      "label": {
        "en": "Address house number addition",
      },
      "name": "addressHouseNumberAddition",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": false,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 24,
      "isRequired": false,
      "label": {
        "en": "Address postal code",
      },
      "name": "addressPostalCode",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": false,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 21,
      "isRequired": false,
      "label": {
        "en": "Address street",
      },
      "name": "addressStreet",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 18,
      "isRequired": false,
      "label": {
        "en": "Full Name",
      },
      "name": "fullName",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": true,
      "editableInPortal": false,
      "export": [],
      "id": 19,
      "isRequired": false,
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "options": null,
      "pattern": null,
      "placeholder": {
        "en": "+31 6 00 00 00 00",
      },
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "tel",
    },
    {
      "duplicateCheck": true,
      "editableInPortal": false,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 20,
      "isRequired": false,
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "options": null,
      "pattern": null,
      "placeholder": {
        "ar": "00 00 00 00 0 00+",
        "en": "+00 0 00 00 00 00",
      },
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": true,
      "type": "tel",
    },
  ],
  "published": true,
  "targetNrRegistrations": 100000,
  "titlePortal": {
    "en": "NLRC OCW program",
  },
  "tryWhatsAppFirst": true,
  "validation": false,
}
`;
